fix splitview pane collapse

--- a/polynote-frontend/style/colors.less
+++ b/polynote-frontend/style/colors.less
@@ -401,7 +401,7 @@ button {
 }
 
 .ui-panel {
-  & > h2 {
+  & > h2, .ui-panel-header > h2 {
     background-color: @ui-sidebar-header;
   }
 
