--- a/polynote-frontend/style/styles.less
+++ b/polynote-frontend/style/styles.less
@@ -1353,7 +1353,7 @@ button.inspect.icon-button {
     font-weight: normal;
   }
 
-  & > h2 {
+  & > h2, .ui-panel-header > h2 {
     grid-area: head;
     position: relative;
     user-select: none;
